--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -1,4 +1,6 @@
 <% if user_signed_in? %>
+  <li><%= link_to 'Plaid Auth', select_bank_user_path(current_user) %></li>
+  <li><%= link_to 'Account', user_path(current_user) %></li>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
